form submission implemented, along with manual answers can be captured in the form
